@@ -65,7 +65,7 @@
 
     <ul class="tools">
       <li>
-        <a href="<%= R(Thoth::PostController, :list) %>" title="List all blog posts">
+        <a href="<%= R(Thoth::PostController, :list) %>" title="List all blog posts and drafts">
           <span class="adminicon post-list"></span>
         </a>
       </li>
