@@ -1,4 +1,4 @@
-<h2>Edit Blog Post</h2>
+<h2>Edit Blog Post<%== @post.is_draft ? ' (Draft)' : '' %></h2>
 
 <% if @post_error %>
   <div class="flash error"><%== @post_error %></div>
