@@ -3,6 +3,8 @@ Thoth History
 
 Version 0.3.0 (?)
   * Requires edge Ramaze from git (http://github.com/manveru/ramaze/).
+  * Blog posts can now be saved as drafts, so you can save posts in progress
+    without publishing them.
 
 Version 0.2.1 (2008-09-09)
   * Requires Sequel 2.5.x (this fixes an issue with SQLite and DateTime
